<resources>
    <string name="app_name">Movies</string>
    <string name="title_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie">Movies</string>
    <string name="tv_show">TV Shows</string>
    <string name="favorite">Favorite</string>
    <string name="popular">Popular</string>
    <string name="vote_average">Vote Average</string>
    <string name="languange">Languange</string>
    <string name="runtime">Runtime</string>
    <string name="release">Release</string>
    <string name="overview">OVERVIEW</string>
    <string name="date">Date</string>
    <string name="message_undo">Batal hapus item</string>
    <string name="message_ok">Oke</string>
</resources>
