<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.kuycoding.jetpack.ui.movie.detail.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_cover"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/astartisborn"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/bg_gradient_cover"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="110dp"
            android:layout_height="170dp"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_cover"
            app:layout_constraintVertical_bias="0.42"
            tools:src="@drawable/astartisborn"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:paddingTop="6dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/text_light_biru"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/img_cover"
            tools:text="Aquaman " />

        <TextView
            android:id="@+id/txt_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Action, Drama, Koe"
            android:fontFamily="@font/roboto"
            android:paddingTop="6dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/text_light_biru"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_title"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <LinearLayout
            android:id="@+id/ll_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/popular"
                android:textColor="@color/text_light_blue" />

            <TextView
                android:id="@+id/txt_populer"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                tools:text="popular"
                android:textColor="@color/text_light_biru"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_1">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/vote_average"
                android:textColor="@color/text_light_blue" />

            <TextView
                android:id="@+id/txt_vote"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                tools:text="vote average"
                android:textColor="@color/text_light_biru"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_2">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/languange"
                android:textColor="@color/text_light_blue" />

            <TextView
                android:id="@+id/txt_lang"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                tools:text="English"
                android:textColor="@color/text_light_biru"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/ll_3"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/runtime"
                android:textColor="@color/text_light_blue" />

            <TextView
                android:id="@+id/txt_runtume"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                tools:text="2h 2m"
                android:textColor="@color/text_light_biru"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_4"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/release"
                android:textColor="@color/text_light_blue" />

            <TextView
                android:id="@+id/txt_release"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                tools:text="October 2, 2019"
                android:textColor="@color/text_light_biru"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_5"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/overview"
                android:textColor="@color/text_light_blue" />

            <TextView
                android:id="@+id/txt_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:justificationMode="inter_word"
                android:paddingTop="8dp"
                tools:text="Detail film"
                android:textColor="@color/text_light_biru"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

